--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
+.company-details {
+  display: flex;
   text-align: center;
+  flex-direction: column;
+  text-transform: uppercase;
+  margin-top: 6%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.company-details img {
+  width: 20%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.sign-in-overview {
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  min-height: 100vh;
+  height: 100vh;
+  display: flex;
+  -webkit-box-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  align-items: center;
+  position: relative;
+}
+.sign-in-form-holder {
+  width: 500px;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 10;
+  position: relative;
+}
+.sign-in-form-detail {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background-color: rgb(255, 255, 255);
+  padding: 70px 50px;
+}
+@media only screen and (max-width: 767px){
+  .sign-in-form-detail {
+    width: 100%;
+    padding: 70px 20px;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-form-button {
+  width: 100%;
+  height: 12%;
+  padding: 2%;
+  border-radius: 3px;
+}
+.company-name {
+  margin: 8% 0;
+}
+.company-name p{
+  font-size: 17px;
+}
+.ant-input-affix-wrapper {
+  line-height: 2.4715;
+  border-radius: 5px;
+}
+.forgot-pass {
+  text-align: center;
+  color: blue;
+}
+.loader-container {
+  text-align: center;
+    position: absolute;
+    z-index: 1000;
+    bottom: 13%;
+    background: #ffffffa1;
+    height: 73%;
+    padding-top: 48%;
+    width: 100%;
+}
+.ant-menu {
+  height: 100vh;
+}
+.nav-item {
+  display: flex;
+  align-items: baseline;
+  justify-content: flex-end;
+  padding: 3%;
+}
+.bread-crumb {
+  padding: 1% 3%;
+  border-bottom: 1px solid #dad6d6;
+  font-size: 27px;
+  padding: 1% 3%;
+}
+.timeline-input {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 5%;
+}
+.timeline-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .timeline-input .ant-select-show-arrow {
+  width: 200px !important;
+} */
